# YOLO

./: .gitignore
CPP/V8/: CMakeLists.txt  detector_tensorrt.cpp  main.cpp
CPP/V8/Detector/: detector_tensorrt.cpp  detector_tensorrt.h
CPP/V8/EngineBuilder/: enginebuilder.cpp  enginebuilder.h  enginebuilder_2.cpp  enginebuilder_2.h  enginebuilder_3.cpp  enginebuilder_3.h
ExportModels/: Export_Onnx.py  Export_Onnx_End2End.py  README.md
Infrence_CPP/: CMakeLists.txt  README.md  detector_tensorrt.h  main.cpp
Python/: requirements.txt
Python/V8/: README.md  main.py  onnx_Segmentor.py  v1_EngineBuilder.py  v1_TRT_Detector.py  yolo_PT_Detector.py
Python/V8/TrainModels/: ConvertSeg2Det.py  convertor_VGG_To_YOLOv8.py  trainYOLOv8.py
TensorRT_EngineBuilder/: main.cpp
